--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+	<link rel="stylesheet" href="style.css">
+	<script src="script.js" defer></script>
 </head>
 <body>
-	<h1>
-	   Voodoo Prediction
-	</h1>
-    
+	<header>
+		<h1>
+			Voodoo Prediction
+		</h1>
+		<h2>
+			Predict your future
+		</h2>
+	</header>
+	<main>
+		<article>
+		a
+		</article>
+	</main>
 </body>
 </html>
